log
Thu 04 May 2023 08:31:43 PM UTC: 
 tests:  0|5
total_score: 0/70
bc82848
Thu 04 May 2023 08:59:52 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:22: error: ‘i’ undeclared (first use in this function)
   58 |           if(n->sudo[i][j] == 0)
      |                      ^
sudoku.c:58:22: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:62:33: error: expected ‘;’ before ‘)’ token
   62 |             for(int i = 0; i < 9)
      |                                 ^
      |                                 ;
sudoku.c:53:7: error: variable ‘encontrado’ set but not used [-Werror=unused-but-set-variable]
   53 |   int encontrado = 0;
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5570b30
Thu 04 May 2023 09:00:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:22: error: ‘i’ undeclared (first use in this function)
   58 |           if(n->sudo[i][j] == 0)
      |                      ^
sudoku.c:58:22: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:62:33: error: expected ‘;’ before ‘)’ token
   62 |             for(int i = 0; i < 9)
      |                                 ^
      |                                 ;
sudoku.c:53:7: error: variable ‘encontrado’ set but not used [-Werror=unused-but-set-variable]
   53 |   int encontrado = 0;
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c6ad7c
Thu 04 May 2023 09:00:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:22: error: ‘i’ undeclared (first use in this function)
   58 |           if(n->sudo[i][j] == 0)
      |                      ^
sudoku.c:58:22: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:62:33: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   62 |             for(int i = 0; i < 9, i++)
      |                                 ^
sudoku.c:62:38: error: expected ‘;’ before ‘)’ token
   62 |             for(int i = 0; i < 9, i++)
      |                                      ^
      |                                      ;
sudoku.c:53:7: error: variable ‘encontrado’ set but not used [-Werror=unused-but-set-variable]
   53 |   int encontrado = 0;
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ad2d89d
Thu 04 May 2023 09:01:04 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:22: error: ‘i’ undeclared (first use in this function)
   58 |           if(n->sudo[i][j] == 0)
      |                      ^
sudoku.c:58:22: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:53:7: error: variable ‘encontrado’ set but not used [-Werror=unused-but-set-variable]
   53 |   int encontrado = 0;
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1979352
Thu 04 May 2023 09:02:03 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:20: error: ‘i’ undeclared (first use in this function)
   58 |         if(n->sudo[i][j] == 0)
      |                    ^
sudoku.c:58:20: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:53:7: error: variable ‘encontrado’ set but not used [-Werror=unused-but-set-variable]
   53 |   int encontrado = 0;
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c9bb8aa
Thu 04 May 2023 09:02:16 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:53:7: error: variable ‘encontrado’ set but not used [-Werror=unused-but-set-variable]
   53 |   int encontrado = 0;
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f542e65
Thu 04 May 2023 09:02:53 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
304b2e6
Fri 05 May 2023 06:05:11 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
eb09743
Fri 05 May 2023 06:05:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6a51ecb
Sat 06 May 2023 11:28:39 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:6: error: expected expression before ‘int’
   47 |   if(int k = 0; k < 9; k++)
      |      ^~~
sudoku.c:51:8: error: expected expression before ‘int’
   51 |     if(int j = 0; j < 9; j++)
      |        ^~~
sudoku.c:53:18: error: ‘k’ undeclared (first use in this function)
   53 |       if(n->sudo[k][j] != 0)
      |                  ^
sudoku.c:53:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:53:21: error: ‘j’ undeclared (first use in this function)
   53 |       if(n->sudo[k][j] != 0)
      |                     ^
sudoku.c:50:9: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   50 |     int columna[10] = {0};
      |         ^~~~~~~
sudoku.c:49:9: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   49 |     int fila[10] = {0};
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
1d3fbbc
Sat 06 May 2023 11:29:39 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:25: error: statement with no effect [-Werror=unused-value]
   59 |       for(n->sudo[j][k] != 0)
      |           ~~~~~~~~~~~~~~^~~~
sudoku.c:59:29: error: expected ‘;’ before ‘)’ token
   59 |       for(n->sudo[j][k] != 0)
      |                             ^
      |                             ;
sudoku.c:59:29: error: expected expression before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
0e66e07
